--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "socket.io-client": "^4.7.5",
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
+    "@types/websocket": "^1.0.10",
     "npm-watch": "0.13.0"
   },
   "scripts": {
@@ -27,7 +31,9 @@
   },
   "watch": {
     "build": {
-      "patterns": ["src"],
+      "patterns": [
+        "src"
+      ],
       "extensions": "js,css"
     }
   },
