Updated build configuration to output to frontend/client

--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "devDependencies": {
     "@types/websocket": "^1.0.10",
+    "cross-env": "^7.0.3",
     "npm-watch": "0.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env BUILD_PATH=./client react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "watch": "npm-watch"
